--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link rel="preload" href="fonts/TelegHPLHS.otf" as="font" type="font/otf" crossorigin>
     <link rel="stylesheet"  href="style.css" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="30">
+    <!-- <meta http-equiv="refresh" content="30"> -->
     <title>Telegraph Office</title>
 </head>
 
